src/parser/CmmParser.java
// Generated from src/parser/Cmm.g4 by ANTLR 4.7
package parser;

import ast.*;
import ast.definitions.*;
import ast.expressions.*;
import ast.statements.*;
import ast.types.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ID=37, INT_CONSTANT=38, 
		REAL_CONSTANT=39, CHAR_CONSTANT=40, WS=41, SINGLE_LINE_COMMENT=42, MULTIPLE_LINE_COMMENT=43;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_main = 2, RULE_var_definition = 3, 
		RULE_func_definition = 4, RULE_parameters = 5, RULE_func_body = 6, RULE_statement = 7, 
		RULE_arguments = 8, RULE_block = 9, RULE_expression = 10, RULE_func_invocation = 11, 
		RULE_type = 12, RULE_built_in_type = 13;
	public static final String[] ruleNames = {
		"program", "definitions", "main", "var_definition", "func_definition", 
		"parameters", "func_body", "statement", "arguments", "block", "expression", 
		"func_invocation", "type", "built_in_type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'void'", "'main'", "'('", "')'", "','", "';'", "'{'", "'}'", "'='", 
		"'return'", "'if'", "'else'", "'while'", "'read'", "'write'", "'['", "']'", 
		"'.'", "'-'", "'*'", "'/'", "'%'", "'+'", "'!'", "'>'", "'>='", "'<'", 
		"'<='", "'!='", "'=='", "'&&'", "'||'", "'struct'", "'int'", "'char'", 
		"'double'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "ID", "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "WS", "SINGLE_LINE_COMMENT", 
		"MULTIPLE_LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext definitions;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			((ProgramContext)_localctx).definitions = definitions();
			((ProgramContext)_localctx).ast =  new Program(0, 0, ((ProgramContext)_localctx).definitions.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Var_definitionContext vd;
		public Func_definitionContext fd;
		public MainContext m;
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<Func_definitionContext> func_definition() {
			return getRuleContexts(Func_definitionContext.class);
		}
		public Func_definitionContext func_definition(int i) {
			return getRuleContext(Func_definitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(37);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(31);
						((DefinitionsContext)_localctx).vd = var_definition();
						for(VarDefinition v : ((DefinitionsContext)_localctx).vd.ast) {_localctx.ast.add(v);}
						}
						break;
					case 2:
						{
						setState(34);
						((DefinitionsContext)_localctx).fd = func_definition();
						_localctx.ast.add(((DefinitionsContext)_localctx).fd.ast);
						}
						break;
					}
					} 
				}
				setState(41);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(42);
			((DefinitionsContext)_localctx).m = main();
			_localctx.ast.add(((DefinitionsContext)_localctx).m.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token t;
		public Func_bodyContext fb;
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			((MainContext)_localctx).t = match(T__0);
			setState(46);
			match(T__1);
			setState(47);
			match(T__2);
			setState(48);
			match(T__3);
			setState(49);
			((MainContext)_localctx).fb = func_body();
			FunctionType type = new FunctionType( (((MainContext)_localctx).fb!=null?(((MainContext)_localctx).fb.start):null).getLine(),
																							(((MainContext)_localctx).fb!=null?(((MainContext)_localctx).fb.start):null).getCharPositionInLine()+1,
																							new VoidType(((MainContext)_localctx).t.getLine(), ((MainContext)_localctx).t.getCharPositionInLine()),
																							new ArrayList<VarDefinition>());
						
								((MainContext)_localctx).ast =  new FuncDefinition((((MainContext)_localctx).fb!=null?(((MainContext)_localctx).fb.start):null).getLine(), (((MainContext)_localctx).fb!=null?(((MainContext)_localctx).fb.start):null).getCharPositionInLine()+1, "main", type,  ((MainContext)_localctx).fb.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public TypeContext t;
		public Token v0;
		public Token v1;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			((Var_definitionContext)_localctx).t = type(0);
			setState(53);
			((Var_definitionContext)_localctx).v0 = match(ID);
			 _localctx.ast.add(new VarDefinition(((Var_definitionContext)_localctx).v0.getLine(), ((Var_definitionContext)_localctx).v0.getCharPositionInLine(), (((Var_definitionContext)_localctx).v0!=null?((Var_definitionContext)_localctx).v0.getText():null), ((Var_definitionContext)_localctx).t.ast));
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(55);
				match(T__4);
				setState(56);
				((Var_definitionContext)_localctx).v1 = match(ID);
				_localctx.ast.add(new VarDefinition(((Var_definitionContext)_localctx).v1.getLine(), ((Var_definitionContext)_localctx).v1.getCharPositionInLine(), (((Var_definitionContext)_localctx).v1!=null?((Var_definitionContext)_localctx).v1.getText():null), ((Var_definitionContext)_localctx).t.ast));
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_definitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public TypeContext ty;
		public Token v;
		public Token name;
		public ParametersContext param;
		public Func_bodyContext body;
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			Type t;
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__32:
			case T__33:
			case T__34:
			case T__35:
				{
				setState(66);
				((Func_definitionContext)_localctx).ty = type(0);
				t=((Func_definitionContext)_localctx).ty.ast;
				}
				break;
			case T__0:
				{
				setState(69);
				((Func_definitionContext)_localctx).v = match(T__0);
				t=new VoidType(((Func_definitionContext)_localctx).v.getLine(), ((Func_definitionContext)_localctx).v.getCharPositionInLine());
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(73);
			((Func_definitionContext)_localctx).name = match(ID);
			setState(74);
			match(T__2);
			setState(75);
			((Func_definitionContext)_localctx).param = parameters();
			setState(76);
			match(T__3);
			setState(77);
			((Func_definitionContext)_localctx).body = func_body();
			FunctionType ftype = new FunctionType( (((Func_definitionContext)_localctx).body!=null?(((Func_definitionContext)_localctx).body.start):null).getLine(), (((Func_definitionContext)_localctx).body!=null?(((Func_definitionContext)_localctx).body.start):null).getCharPositionInLine()+1, t, ((Func_definitionContext)_localctx).param.ast);
						((Func_definitionContext)_localctx).ast =  new FuncDefinition(((Func_definitionContext)_localctx).name.getLine(), ((Func_definitionContext)_localctx).name.getCharPositionInLine()+1, (((Func_definitionContext)_localctx).name!=null?((Func_definitionContext)_localctx).name.getText():null), ftype, ((Func_definitionContext)_localctx).body.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public TypeContext t0;
		public Token n0;
		public TypeContext t1;
		public Token n1;
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__32:
			case T__33:
			case T__34:
			case T__35:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				((ParametersContext)_localctx).t0 = type(0);
				setState(82);
				((ParametersContext)_localctx).n0 = match(ID);
				_localctx.ast.add(new VarDefinition(((ParametersContext)_localctx).n0.getLine(), ((ParametersContext)_localctx).n0.getCharPositionInLine()+1, (((ParametersContext)_localctx).n0!=null?((ParametersContext)_localctx).n0.getText():null), ((ParametersContext)_localctx).t0.ast));
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(84);
					match(T__4);
					setState(85);
					((ParametersContext)_localctx).t1 = type(0);
					setState(86);
					((ParametersContext)_localctx).n1 = match(ID);
					_localctx.ast.add(new VarDefinition(((ParametersContext)_localctx).n1.getLine(), ((ParametersContext)_localctx).n1.getCharPositionInLine()+1, (((ParametersContext)_localctx).n1!=null?((ParametersContext)_localctx).n1.getText():null), ((ParametersContext)_localctx).t1.ast));
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_bodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public Var_definitionContext vd;
		public StatementContext s;
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Func_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_body; }
	}

	public final Func_bodyContext func_body() throws RecognitionException {
		Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__6);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35))) != 0)) {
				{
				{
				setState(97);
				((Func_bodyContext)_localctx).vd = var_definition();
				for(VarDefinition v:((Func_bodyContext)_localctx).vd.ast) {_localctx.ast.add(v);}
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__9) | (1L << T__10) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__18) | (1L << T__23) | (1L << ID) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(105);
				((Func_bodyContext)_localctx).s = statement();
				_localctx.ast.addAll(((Func_bodyContext)_localctx).s.ast);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public ExpressionContext e1;
		public ExpressionContext e2;
		public Func_invocationContext fi;
		public Token r;
		public ExpressionContext e;
		public Token i;
		public BlockContext b;
		public BlockContext b2;
		public Token w;
		public ExpressionContext e0;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Func_invocationContext func_invocation() {
			return getRuleContext(Func_invocationContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}
